apply plugin: 'com.android.application'

// for Firebase
apply plugin: 'com.google.gms.google-services'

android {
    compileSdkVersion 30
    buildToolsVersion "30.0.2"

    defaultConfig {
        applicationId "kr.ac.ssu.wherealarmyou"
        minSdkVersion defaultMinSdkVersion
        targetSdkVersion 30
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    implementation fileTree(dir: "libs", include: ["*.jar"])
    implementation 'androidx.appcompat:appcompat:1.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.0.2'
    implementation 'com.google.android.material:material:1.2.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'

    // Firebase library version management tool
    implementation platform('com.google.firebase:firebase-bom:25.12.0')

    // Add the dependency for the Firebase SDK for Google Analytics
    // When using the BoM, don't specify versions in Firebase dependencies
    implementation 'com.google.firebase:firebase-analytics'

    // Firebase Login UI
    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'

    // Firebase Authentication
    implementation platform('com.google.firebase:firebase-bom:26.0.0')
    implementation 'com.google.firebase:firebase-auth'
    implementation 'com.google.android.gms:play-services-auth:18.1.0'

    // Firebase Realtime Database
    implementation 'com.google.firebase:firebase-database'

    // 네이버 지도 SDK
    implementation 'com.naver.maps:map-sdk:3.10.0'

    // Lombok
    compileOnly 'org.projectlombok:lombok:1.18.16'
    annotationProcessor 'org.projectlombok:lombok:1.18.16'

    // RX Java
//    implementation "io.reactivex.rxjava3:rxjava:3.0.7"

    // Reactor
    implementation 'io.projectreactor:reactor-core:3.2.3.RELEASE'

    // Reactor Test
//    androidTestImplementation 'io.projectreactor:reactor-test:3.2.3.RELEASE'
//    testImplementation 'io.projectreactor:reactor-test:3.2.3.RELEASE'

    // Google Play Service Location API
    implementation 'com.google.android.gms:play-services-location:17.1.0'

    // Floating Action Buttons
    implementation 'me.jahirfiquitiva:FABsMenu:1.1.4'

    // Recycler View
    implementation 'androidx.recyclerview:recyclerview'

    // View Model
    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"

    // LiveData
    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"

    // Guava
    implementation("com.google.guava:guava:28.2-android")

    // Lottie
    implementation 'com.airbnb.android:lottie:3.5.0'
}